--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,20 @@
         "camelcase": "error",
         "spaced-comment": "error",
         "quotes": ["error", "single"],
-        "no-duplicate-imports": "error"
+        "no-duplicate-imports": "error",
+        "at-rule-no-unknown": [
+            true,
+            {
+              "ignoreAtRules": [
+                "extends",
+                "apply",
+                "tailwind",
+                "components",
+                "utilities",
+                "screen"
+              ]
+            }
+          ]
     },
     "settings": {
         "import/resolver": {
